propertee-core/src/test/resources/tests/109_error_integer_literal.expected
before
Runtime error: Runtime Error at line 3:4: Integer literal out of range: 9999999999
